--- a/app/Dockerfile.production
+++ b/app/Dockerfile.production
@@ -12,6 +12,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Copy existing application directory contents
 
 COPY --chown=www-data:www-data . /var/www
+COPY --chown=www-data:www-data .env.example .env
 
 RUN composer install \
     && php artisan key:generate \
