Runs migrate and phpunit

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,9 +5,18 @@ steps:
   - id: "Rodando docker ps"
     name: "gcr.io/cloud-builders/docker"
     args: ["ps"]
-  - id: "Rodando composer"
+  - id: "Rodando migrate"
     name: "gcr.io/cloud-builders/docker"
-    args: ["exec", "-t", "app", "composer", "install"]
-  - id: "Copiando .env"
+    args: ["exec", "-t", "app", "php", "/var/www/artisan", "migrate"]
+  - id: "Rodadno phpnit"
     name: "gcr.io/cloud-builders/docker"
-    args: ["exec", "-t", "app", "cp", ".env.example", ".env"]
+    args:
+      [
+        "exec",
+        "-t",
+        "app",
+        "php",
+        "/var/www/vendor/bin/phunit",
+        "-c",
+        "/var/www/phpunit.xml",
+      ]
