--- a/docker-compose.cloudbuild.yaml
+++ b/docker-compose.cloudbuild.yaml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: ./app/
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile
     container_name: app
     restart: unless-stopped
     tty: true
