Rodando o composer install

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,18 +5,12 @@ steps:
   - id: "Rodando docker ps"
     name: "gcr.io/cloud-builders/docker"
     args: ["ps"]
-  # - id: "Rodando chmod all"
-  #   name: "gcr.io/cloud-builders/docker"
-  #   args: ["exec", "-t", "app", "chmod", "-R", "775", "/var/www"]
   - id: "Rodando composer"
     name: "gcr.io/cloud-builders/docker"
-    args: ["exec", "-u", "root", "-t", "app", "ls", "-la"]
+    args: ["exec", "-u", "root", "-t", "app", "composer", "install"]
   - id: "Rodando copy .env"
     name: "gcr.io/cloud-builders/docker"
     args: ["exec", "-u", "root", "-t", "app", "cp", ".env.example", ".env"]
-  - id: "Rodando catt"
-    name: "gcr.io/cloud-builders/docker"
-    args: ["exec", "-u", "root", "-t", "app", "cat", ".env"]
   - id: "Rodando generate"
     name: "gcr.io/cloud-builders/docker"
     args:
@@ -30,6 +24,12 @@ steps:
         "/var/www/artisan",
         "key:generate",
       ]
+  - id: "Rodando ls -la"
+    name: "gcr.io/cloud-builders/docker"
+    args: ["exec", "-u", "root", "-t", "app", "ls", "-la"]
+  - id: "Rodando catt"
+    name: "gcr.io/cloud-builders/docker"
+    args: ["exec", "-u", "root", "-t", "app", "cat", ".env"]
   - id: "Rodando config cache"
     name: "gcr.io/cloud-builders/docker"
     args:
