--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -47,7 +47,7 @@ steps:
     name: "gcr.io/cloud-builders/docker"
     args:
       ["exec", "-u", "root", "-t", "app", "php", "/var/www/artisan", "migrate"]
-  - id: "Rodando phpunit"
+  - id: "Rodando PhpUnit"
     name: "gcr.io/cloud-builders/docker"
     args:
       [
