--- a/docker-compose.cloudbuild.yaml
+++ b/docker-compose.cloudbuild.yaml
@@ -2,7 +2,9 @@ version: "3"
 
 services:
   app:
-    build: ./app/
+    build:
+      context: ./app/
+      dockerfile: Dockerfile
     container_name: app
     restart: unless-stopped
     tty: true
